# dotfiles

./: .chezmoidata.yaml  .chezmoiignore  .chezmoiremove  .gitignore  .mcp.json  .secretlintrc.json  Brewfile  CLAUDE.md  Dockerfile  README.md  dot_gitconfig.tmpl  dot_tmux.conf  run_once_after_02-configure-shell.sh.tmpl  run_once_after_04-setup-dotfiles-hooks.sh.tmpl  run_once_before_01-install-homebrew.sh.tmpl  run_once_before_03-install-mise.sh.tmpl  run_onchange_after_01-install-mise-tools.sh.tmpl  run_onchange_before_02-install-brew-packages.sh.tmpl
.claude/: settings.json
.hooks/: pre-commit
docs/: index.html
docs/data/: metrics.json
dot_claude/: CLAUDE.md  private_executable_statusline-command.py  private_executable_statusline-command.sh  settings.json.tmpl
dot_claude/agents/: architecture-analyst.md  code-reviewer.md  requirements-analyst.md  security-reviewer.md  tdd-guide.md
dot_claude/commands/: sync-claude-config.md
dot_claude/hooks/: private_executable_auto-format.sh  private_executable_block-defer-phrases.sh  private_executable_block-no-verify.sh  (+19 more)
dot_claude/tools/yb-memory/: pyproject.toml
dot_claude/tools/yb-memory/src/yb_memory/: __init__.py  __main__.py  chunker.py  cli.py  db.py  embedder.py  indexer.py  models.py  searcher.py  server.py
dot_claude/tools/yb-memory/tests/: conftest.py  test_chunker.py  test_db.py  test_embedder.py  test_indexer.py  test_searcher.py
dot_claude/tools/yb-memory/tests/fixtures/: sample_session.jsonl
dot_config/: starship.toml
scripts/: collect-metrics.sh
tests/: odin-board.bats
(+179 files in other folders)
