[project]
name = "yb-memory"
version = "0.2.0"
description = "Claude Code用長期記憶ツール - セッション間の会話履歴を検索可能にする"
requires-python = ">=3.11"
dependencies = [
  "sentence-transformers>=3.0",
  "sqlite-vec>=0.1.6",
]

[project.scripts]
yb-memory = "yb_memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yb_memory"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
